# posdata-studio

./: README.md  app.py  index.html  main.js  pyproject.toml  style.css
api/: index.py
routes/: contact.py
static/: projects.json
static/css/: main.css  main.css.bak  main.css_backup  project.css  variables.css
static/js/: animations.js  contact.js  cursor.js  gallery.js  main.js  pixel-trail.js  project.js  shader.js  webgl-gallery.js
static/js/vendors/: gsap.min.js  jquery.min.js
templates/: index.html  index.html.bak  index.html.bak2  project.html
