[tool.poetry]
name = "posdata-studio"
version = "0.1.0"
description = ""
authors = ["jossmarsala"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
flask = "*"
flask-wtf = "*"
email-validator = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
